--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -946,20 +946,25 @@
                             </ListView>
                             
                             <Border Background="#DD3F3F46" CornerRadius="5" Padding="10"
-                                    HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,10"
-                                    Visibility="{Binding ImageProcessing.SelectedItemsCount, Converter={StaticResource MultiSelectCountToVisibilityConverter}}">
+                                HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,10"
+                                Visibility="{Binding ImageProcessing.SelectedItemsCount, Converter={StaticResource CountToVisibilityConverter}}"> <!-- ИЗМЕНЕНО: Используем другой конвертер -->
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock VerticalAlignment="Center" Margin="0,0,10,0">
                                         <Run Text="{local:Translate Tab_SelectedItems}"/>
                                         <Run Text="{Binding ImageProcessing.SelectedItemsCount}"/>
                                     </TextBlock>
+                                    
+                                    <Button Content="{local:Translate SliderCompare_Compare}" Margin="0,0,5,0"
+                                            Command="{Binding CompareSelectedImagesCommand}"
+                                            CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"
+                                            IsEnabled="{Binding ElementName=lvOutputs, Path=SelectedItems.Count, Converter={StaticResource SelectionCountToBooleanConverter}, ConverterParameter=2}"/>
                                     <Button Content="{local:Translate Tab_SaveSelected}" Background="{StaticResource SuccessBrush}"
                                             Command="{Binding ImageProcessing.SaveSelectedImagesCommand}"
                                             CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"/>
                                     <Button Content="{local:Translate Tab_DeleteSelected}" Background="{StaticResource ErrorBrush}"
                                             Command="{Binding ImageProcessing.DeleteSelectedImagesCommand}"
                                             CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"
-                                            Margin="5,0,0,0"/>
+                                         Margin="5,0,0,0"/>
                                 </StackPanel>
                             </Border>
                             <Button Content="&#xE74D;" Style="{StaticResource IconButton}" Command="{Binding ImageProcessing.ClearOutputsCommand}" Background="{StaticResource ErrorBrush}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,10" ToolTip="{local:Translate Tab_ClearFilteredResults}"/>
@@ -1270,6 +1275,8 @@
             </Grid>
             <Border x:Name="SafeZone" Background="Transparent" Margin="120, 80, 120, 100"/>
         </Grid>
+        
+        <local:SliderCompareView DataContext="{Binding SliderCompare}" Grid.Row="0" Grid.RowSpan="4"/>
         
         <Popup x:Name="GroupNavigationPopup"
                IsOpen="{Binding IsGroupNavigationPopupOpen}"
