--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -955,8 +955,7 @@
                                     
                                     <Button Content="{local:Translate SliderCompare_Compare}" Margin="0,0,5,0"
                                             Command="{Binding CompareSelectedImagesCommand}"
-                                            CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"
-                                            IsEnabled="{Binding ElementName=lvOutputs, Path=SelectedItems.Count, Converter={StaticResource SelectionCountToBooleanConverter}, ConverterParameter=2}"/>
+                                            CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"/>
                                     <Button Content="{local:Translate Tab_SaveSelected}" Background="{StaticResource SuccessBrush}"
                                             Command="{Binding ImageProcessing.SaveSelectedImagesCommand}"
                                             CommandParameter="{Binding ElementName=lvOutputs, Path=SelectedItems}"/>
