1) hide in taskbar undocked windows 2) hide console btn 3) rename preset btn => update preset btn with current values + rename

--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -607,9 +607,9 @@
                                         </StackPanel.Style>
 
                                         <Button Content="&#xE70F;"
-                                                Command="{Binding DataContext.StartRenamePresetCommand, RelativeSource={RelativeSource AncestorType=Expander}}"
+                                                Command="{Binding DataContext.StartUpdatePresetCommand, RelativeSource={RelativeSource AncestorType=Expander}}"
                                                 CommandParameter="{Binding}"
-                                                ToolTip="{local:Translate Presets_RenameTooltip}"
+                                                ToolTip="{local:Translate Presets_UpdateTooltip}"
                                                 Style="{StaticResource IconButton}"/>
                                         
                                         <!-- FIX: Use the correct icon character code for the delete button -->
