1) undocked group height autosize 2) gallery hotkeys: del - delete, num5 - save 3) update eta every 1 sec

--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -865,13 +865,14 @@
                                 </Grid>
                             </Border>
                             <Grid>
-                            <ListView x:Name="lvOutputs" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                      ItemsSource="{Binding ImageProcessing.FilteredImageOutputs}"
-                                      Background="Transparent" BorderThickness="0"
-                                      SelectionMode="Extended"
-                                      SelectionChanged="LvOutputs_SelectionChanged"
-                                      PreviewKeyDown="LvOutputs_PreviewKeyDown"
-                                      SelectedItem="{Binding ImageProcessing.SelectedGalleryImage, Mode=TwoWay}">
+                                <ListView x:Name="lvOutputs" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                          ItemsSource="{Binding ImageProcessing.FilteredImageOutputs}"
+                                          Background="Transparent" BorderThickness="0"
+                                          SelectionMode="Extended"
+                                          SelectionChanged="LvOutputs_SelectionChanged"
+                                          PreviewKeyDown="LvOutputs_PreviewKeyDown"
+                                          KeyDown="LvOutputs_KeyDown"
+                                          SelectedItem="{Binding ImageProcessing.SelectedGalleryImage, Mode=TwoWay}">
                                 <ListView.ItemsPanel><ItemsPanelTemplate><WrapPanel Orientation="Horizontal" Margin="5"/></ItemsPanelTemplate></ListView.ItemsPanel>
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
